// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package prenatal;

import "mojo/core/time.proto";

option go_package = "github.com/liankui/prenatal/go/pkg/prenatal;prenatal";
option java_multiple_files = true;
option java_outer_classname = "AnswerProto";
option java_package = "prenatal";

message Answer {
    string id = 1;
    string question_id = 5;
    string question_category = 6;
    string user_id = 10;
    string user_name = 12;
    string answer = 15;
    bool is_correct = 20;
    string user_comment = 21;
    mojo.core.Timestamp create_time = 100;
    mojo.core.Timestamp update_time = 101;
}